Remove support for VS2015

--- a/test/Concurrent.Tests/Concurrent.Tests.csproj
+++ b/test/Concurrent.Tests/Concurrent.Tests.csproj
@@ -42,9 +42,6 @@
     <AssemblyOriginatorKeyFile>..\..\tools\keypair.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NETStandard.WindowsCE">
-      <HintPath>$(SolutionDir)src\NETStandard.WindowsCE\bin\Debug\net35-client\NETStandard.WindowsCE.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Threading, Version=1.0.2856.102, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\TaskParallelLibrary.1.0.2856.0\lib\Net35\System.Threading.dll</HintPath>
@@ -81,6 +78,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\NETStandard.WindowsCE\NETStandard.WindowsCE.csproj">
+      <Project>{24857e98-e634-4803-8cc6-172b8389d89d}</Project>
+      <Name>NETStandard.WindowsCE</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
       <Project>{11362ef6-8335-4739-9ab0-2fff56589661}</Project>
       <Name>Common.Tests</Name>
