--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -38,9 +38,6 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NETStandard.WindowsCE">
-      <HintPath>..\..\src\NETStandard.WindowsCE\bin\Debug\net35-client\NETStandard.WindowsCE.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -92,6 +89,10 @@
     <Compile Include="WeakReferenceTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\NETStandard.WindowsCE\NETStandard.WindowsCE.csproj">
+      <Project>{24857e98-e634-4803-8cc6-172b8389d89d}</Project>
+      <Name>NETStandard.WindowsCE</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
       <Project>{11362ef6-8335-4739-9ab0-2fff56589661}</Project>
       <Name>Common.Tests</Name>
