--- a/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
+++ b/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
@@ -52,4 +52,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers" Version="2.6.1">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
