--- a/NETStandard.WindowsCE.props
+++ b/NETStandard.WindowsCE.props
@@ -10,6 +10,7 @@
     <FileAlignment>512</FileAlignment>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
+    <Optimize>False</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
