--- a/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
+++ b/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
@@ -15,6 +15,7 @@
     <RootNamespace>System</RootNamespace>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
+
   <PropertyGroup Condition="'$(TargetFramework)' == 'net35-cf'">
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
@@ -28,7 +29,9 @@
     <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
     <Optimize>False</Optimize>
   </PropertyGroup>
+
   <PropertyGroup Condition="'$(TargetFramework)' == 'net35'">
+    <FrameworkPathOverride>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v3.5\Profile\Client</FrameworkPathOverride>
     <DisableImplicitFrameworkReferences>True</DisableImplicitFrameworkReferences>
     <NoWarn>$(NoWarn);CS0436;CS0114</NoWarn>
   </PropertyGroup>
