Update version and simplify assembly and package metadata setting

--- a/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
+++ b/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
@@ -11,9 +11,25 @@
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <PackageId>NETStandard.WindowsCE</PackageId>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <RootNamespace>System</RootNamespace>
     <LangVersion>8.0</LangVersion>
+    <VersionPrefix>1.7.1</VersionPrefix>
+    <InformationalVersion>$(Version)</InformationalVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.7.1.0</FileVersion>
+    <Description>This library includes most of the APIs from the .NET Standard specification built on top of Windows CE platform.</Description>
+    <Title>.NET Standard API for Windows CE</Title>
+    <PackageTags>net35-cf;windowsce;wince;netstandard;netstandard1.0;backport</PackageTags>
+    <AssemblyTitle>$(Title) ($(TargetFramework))</AssemblyTitle>
+    <Product>$(Title)</Product>
+    <PackageOutputPath>$(SolutionDir)artifacts</PackageOutputPath>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <IncludeSource>true</IncludeSource>
+    <Authors>Fabricio Godoy</Authors>
+    <Company>Fabrício Godoy</Company>
+    <Copyright>Copyright © Fabrício Godoy</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net35-cf'">
